Fix #1193 Editable properties appear at the top of the window viewport on firefox

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -528,12 +528,6 @@ editable-property {
   position: relative;
 }
 
-@-moz-document url-prefix() {
-  editable-property {
-    position: static;
-  }
-}
-
 .ep[ng-show=editing] {
   position: absolute;
   top: -20px;
